Fixed: Exception when dragging a piece that animated to the bucket.
Animate pieces to the bucket
Fixed: Pieces don't drag the right amount when the screen is scaled
Fixed: Pieces should be pointing up in bucket so they are in alignment with nearest target cells
Randomize the location of slices in the bucket
Fixed: Get rid of pie slice line
Fixed bucket location
Added Lombok for data classes
Added pie model and view to main sim
Require pieces to intersect with cells before they are dropped
Fixed: when dragged, piece should not be contained by a cell
Added detection of cells
Removed "click to toggle" cell feature
In the icon, change the number line to go from "0 to 1" with no tick marks in between to give a consistent view of "the whole"
Fixed: The number of pieces in the bucket should be equal to the max numerator value - number in the slices
Fixed: Adding values with the bucket should change the spinner
Hide the bucket for number line
Fixed: Pieces should be the right size or jump to right size when dragged out of bucket
Added buckets
# 0.00.32 (61123) Feb 8, 2012
Intro tab: When changing the denominator, have pieces stay as close to their original location as possible (no animation) instead of all filling from the left
Make the bars a little smaller in the representation control panel buttons
Show entire filled whole icons in the representation control panel, not objects with divisions
Intro tab: Removed reduced/mixed control panel
Fixed: Fraction goes off the screen to the left on mac
# 0.00.31 (59741) Dec 28, 2011
Removed other tabs for posting feasibility test for Tab 1
Nudged cakes slightly to the right to avoid colliding with left edge of window
# 0.00.30 (59737) Dec 28, 2011
Fixed: If cake slices are removed by clicking so there is an empty cake, the spinners fail to function
Made the cake button icon image to be in fourths to be consistent with the others
Improved empty cake piece detection
# 0.00.29 (59730) Dec 27, 2011
Fixed a bug in cake slice selection