@@ -2,13 +2,14 @@
 package edu.colorado.phet.fractionsintro.intro.model.slicemodel;
 
 import fj.data.List;
+import lombok.Data;
 
 /**
  * Immutable state representing an empty pie which can be filled up by the user.
  *
  * @author Sam Reid
  */
-@lombok.Data public class Pie {
+@Data public class Pie {
     public final List<Slice> cells;
     public int size;
 }
